--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      alt="Tarun Garg"
+      title="Tarun Garg"
+      href="../src/images/photo.png"
+    />
+    <meta
+      name="url"
+      property="og:url"
+      content="https://tarungarg98.github.io"
+    />
+    <meta name="title" property="og:title" content="Tarun Garg" />
+    <meta name="image" property="og:image" content="../src/images/icon.jpg" />
+    <meta
+      name="description"
+      property="og:description"
+      content="Personal Website of Tarun Garg"
+    />
+    <meta name="type" property="og:type" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tarun Garg</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
