--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      alt="Tarun Garg"
-      title="Tarun Garg"
-      href="../src/images/photo.png"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta
       name="url"
       property="og:url"
@@ -28,7 +23,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
