google-site-verification added

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       property="og:url"
       content="https://tarungarg98.github.io"
     />
+    <meta
+      name="google-site-verification"
+      content="MQTzA14fUMpZgA79mpOIbc6vh7mnwrRD1cdxDdTHI1Y"
+    />
     <meta name="title" property="og:title" content="Tarun Garg" />
     <meta name="image" property="og:image" content="../src/images/icon.jpg" />
     <meta
