--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
 
-    <meta
-      name="url"
-      property="og:url"
-      content="https://tarungarg98.github.io"
-    />
     <meta
       name="google-site-verification"
       content="MQTzA14fUMpZgA79mpOIbc6vh7mnwrRD1cdxDdTHI1Y"
     />
-    <meta name="title" property="og:title" content="Tarun Garg" />
-    <meta name="image" property="og:image" content="../src/images/icon.jpg" />
-    <meta
-      name="description"
-      property="og:description"
-      content="Personal Website of Tarun Garg"
-    />
-    <meta name="type" property="og:type" content="website" />
+
+    <!-- HTML Meta Tags -->
+    <title>Tarun Garg</title>
+    <meta name="description" content="Personal Website of Tarun Garg" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://tarungarg98.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tarun Garg" />
+    <meta property="og:description" content="Personal Website of Tarun Garg" />
+    <meta property="og:image" content="%PUBLIC_URL%/Tarun_Garg_preview.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="tarungarg98.github.io" />
+    <meta property="twitter:url" content="https://tarungarg98.github.io/" />
+    <meta name="twitter:title" content="Tarun Garg" />
+    <meta name="twitter:description" content="Personal Website of Tarun Garg" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/Tarun_Garg_preview.png" />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -47,15 +53,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
