--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Personal Website of Tarun Garg" />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://tarungarg98.github.io/" />
+    <meta property="og:url" content="https://tarungarg98.github.io" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Tarun Garg" />
     <meta property="og:description" content="Personal Website of Tarun Garg" />
@@ -23,7 +23,7 @@
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="tarungarg98.github.io" />
-    <meta property="twitter:url" content="https://tarungarg98.github.io/" />
+    <meta property="twitter:url" content="https://tarungarg98.github.io" />
     <meta name="twitter:title" content="Tarun Garg" />
     <meta name="twitter:description" content="Personal Website of Tarun Garg" />
     <meta name="twitter:image" content="%PUBLIC_URL%/Tarun_Garg_preview.png" />
