--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
+    <link rel="icon" href="icon.png" />
 
     <meta
       name="google-site-verification"
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Tarun Garg" />
     <meta property="og:description" content="Personal Website of Tarun Garg" />
-    <meta property="og:image" content="%PUBLIC_URL%/Tarun_Garg_preview.png" />
+    <meta property="og:image" content="Tarun_Garg_preview.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -26,7 +26,7 @@
     <meta property="twitter:url" content="https://tarungarg98.github.io" />
     <meta name="twitter:title" content="Tarun Garg" />
     <meta name="twitter:description" content="Personal Website of Tarun Garg" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/Tarun_Garg_preview.png" />
+    <meta name="twitter:image" content="Tarun_Garg_preview.png" />
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
