added GTag Manager

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
 
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LN7ZYBXKG7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LN7ZYBXKG7");
+    </script>
     <meta
       name="google-site-verification"
       content="MQTzA14fUMpZgA79mpOIbc6vh7mnwrRD1cdxDdTHI1Y"
