--- a/404.html
+++ b/404.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=/index.html">
-    <title>Page Redirection</title>
-</head>
-<body>
-    If you are not redirected automatically, follow the <a href="/index.html">link to the main page</a>.
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>GitHub Pages Issue</title>
+    <script type="text/javascript">  
+ 
+      var pathSegmentsToKeep = 0;
+
+      var l = window.location;
+      l.replace(
+        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash
+      );
+    </script>
+  </head>
+  <body>
+  </body>
 </html>
